feat: update navigation links for consistency and improve slider interaction logic

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <a href="https://collectivv.co" target="_blank">
                                  <i class="fa-solid fa-arrow-up-right-from-square"></i> Live
                             </a>
-                            <a href="projects/collectivv.html">
+                            <a href="projects/collectivv">
                                 <i class="fa-solid fa-circle-info"></i></i> Learn More
                             </a>
                         </div>
@@ -168,7 +168,7 @@
                             <a href="https://mememachine3000.com/" target="_blank">
                                  <i class="fa-solid fa-arrow-up-right-from-square"></i> Live
                             </a>
-                            <a href="projects/mememachine3000.html">
+                            <a href="projects/mememachine3000">
                                 <i class="fa-solid fa-circle-info"></i></i> Learn More
                             </a>
                         </div>
@@ -199,7 +199,7 @@
                                 <a href="https://livinglifefearless.co" target="_blank">
                                     <i class="fa-solid fa-arrow-up-right-from-square"></i> Live
                                 </a>
-                                <a href="work/living-life-fearless.html">
+                                <a href="work/living-life-fearless">
                                     <i class="fa-solid fa-circle-info"></i></i> Learn More
                                 </a>
                             </div>
@@ -209,7 +209,7 @@
                                 <a href="https://livinglifefearless.co" target="_blank">
                                     <i class="fa-solid fa-arrow-up-right-from-square"></i> Live
                                 </a>
-                                <a href="work/living-life-fearless.html">
+                                <a href="work/living-life-fearless">
                                     <i class="fa-solid fa-circle-info"></i></i> Learn More
                                 </a>
                             </div>
@@ -240,7 +240,7 @@
                                 <a href="https://anobs.co/" target="_blank">
                                     <i class="fa-solid fa-arrow-up-right-from-square"></i> Live
                                 </a>
-                                <a href="work/anobs.html">
+                                <a href="work/anobs">
                                     <i class="fa-solid fa-circle-info"></i></i> Learn More
                                 </a>
                             </div>
@@ -250,7 +250,7 @@
                                 <a href="https://anobs.co/" target="_blank">
                                     <i class="fa-solid fa-arrow-up-right-from-square"></i> Live
                                 </a>
-                                <a href="work/anobs.html">
+                                <a href="work/anobs">
                                     <i class="fa-solid fa-circle-info"></i></i> Learn More
                                 </a>
                             </div>
@@ -278,7 +278,7 @@
                                 <a href="https://shop.livinglifefearless.co/" target="_blank">
                                     <i class="fa-solid fa-arrow-up-right-from-square"></i> Live
                                 </a>
-                                <a href="work/shop-llf.html">
+                                <a href="work/shop-llf">
                                     <i class="fa-solid fa-circle-info"></i></i> Learn More
                                 </a>
                             </div>
@@ -288,7 +288,7 @@
                                 <a href="https://shop.livinglifefearless.co/" target="_blank">
                                     <i class="fa-solid fa-arrow-up-right-from-square"></i> Live
                                 </a>
-                                <a href="work/shop-llf.html">
+                                <a href="work/shop-llf">
                                     <i class="fa-solid fa-circle-info"></i></i> Learn More
                                 </a>
                             </div>
