--- a/work/anobs.html
+++ b/work/anobs.html
@@ -34,7 +34,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="../index.html"
+        <a href="../"
           ><img src="../imgs/logos/name-logo-light.webp" alt=""
         /></a>
       </div>
@@ -44,37 +44,31 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="../index.html" class="nav__link" tabindex="-1">Home</a>
+            <a href="../" class="nav__link" tabindex="-1">Home</a>
             <span class="nav__link--index">1</span>
           </li>
           <li class="nav__item">
-            <a href="../index.html#services" class="nav__link" tabindex="-1"
+            <a href="../#services" class="nav__link" tabindex="-1"
               >My Services</a
             >
             <span class="nav__link--index">2</span>
           </li>
           <li class="nav__item">
-            <a href="../index.html#about" class="nav__link" tabindex="-1"
-              >About Me</a
-            >
+            <a href="../#about" class="nav__link" tabindex="-1">About Me</a>
             <span class="nav__link--index">3</span>
           </li>
           <li class="nav__item">
-            <a href="../index.html#skills" class="nav__link" tabindex="-1"
-              >My Skills</a
-            >
+            <a href="../#skills" class="nav__link" tabindex="-1">My Skills</a>
             <span class="nav__link--index">4</span>
           </li>
           <li class="nav__item">
-            <a href="../index.html#projects" class="nav__link" tabindex="-1"
+            <a href="../#projects" class="nav__link" tabindex="-1"
               >My Projects</a
             >
             <span class="nav__link--index">5</span>
           </li>
           <li class="nav__item">
-            <a href="../index.html#work" class="nav__link" tabindex="-1"
-              >My Work</a
-            >
+            <a href="../#work" class="nav__link" tabindex="-1">My Work</a>
             <span class="nav__link--index">6</span>
           </li>
           <li class="nav__item">
