Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dario Hunt, Full-Stack Digital Problem Solver</title>
+        <meta name="title" content="Dario Hunt, Full-Stack Digital Problem Solver">
+        <meta name="description" content="Portfolio of Dario Hunt, a Full-Stack Developer and Creative Director specializing in React, branding, and web design.">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://dariohunt.com/">
+        <meta property="og:title" content="Dario Hunt, Full-Stack Digital Problem Solver">
+        <meta property="og:description" content="Portfolio of Dario Hunt, a Full-Stack Developer and Creative Director specializing in React, branding, and web design.">
+        <meta property="og:image" content="https://www.dariohunt.com/imgs/og-image.jpg">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://dariohunt.com/">
+        <meta property="twitter:title" content="Dario Hunt, Full-Stack Digital Problem Solver">
+        <meta property="twitter:description" content="Portfolio of Dario Hunt, a Full-Stack Developer and Creative Director specializing in React, branding, and web design.">
+        <meta property="twitter:image" content="https://www.dariohunt.com/imgs/og-image.jpg">
+    
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
         <link rel="icon" href="imgs/logos/favicon/favicon.ico" type="image/x-icon">
@@ -18,7 +35,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="imgs/logos/name-logo-light.webp" alt="">
+                <img src="imgs/logos/name-logo-light.webp" alt="Dario Hunt Logo" class="logo__img">
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
