--- a/projects/mememachine3000.html
+++ b/projects/mememachine3000.html
@@ -4,8 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      LIVING LIFE FEARLESS » Dario Hunt, Full-Stack Digital Problem Solver
+      Infinite Meme Machine 3000 » Dario Hunt, Full-Stack Digital Problem Solver
     </title>
+
+    <meta
+      name="title"
+      content="Infinite Meme Machine 3000 » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      name="description"
+      content="Infinite Meme Machine 3000 is an AI-powered meme generation platform designed to produce context-aware, culturally relevant memes at scale."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:url"
+      content="https://www.dariohunt.com/projects/mememachine3000"
+    />
+    <meta
+      property="og:title"
+      content="Infinite Meme Machine 3000 » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      property="og:description"
+      content="Infinite Meme Machine 3000 is an AI-powered meme generation platform designed to produce context-aware, culturally relevant memes at scale."
+    />
+    <meta
+      property="og:image"
+      content="https://www.dariohunt.com/imgs/projects/meme-machine-1.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://www.dariohunt.com/projects/mememachine3000"
+    />
+    <meta
+      property="twitter:title"
+      content="Infinite Meme Machine 3000 » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      property="twitter:description"
+      content="Infinite Meme Machine 3000 is an AI-powered meme generation platform designed to produce context-aware, culturally relevant memes at scale."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.dariohunt.com/imgs/projects/meme-machine-1.webp"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -37,7 +85,10 @@
     <header>
       <div class="logo">
         <a href="../"
-          ><img src="../imgs/logos/name-logo-light.webp" alt=""
+          ><img
+            src="../imgs/logos/name-logo-light.webp"
+            alt="Dario Hunt Logo"
+            class="logo__img"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
