--- a/work/anobs.html
+++ b/work/anobs.html
@@ -4,6 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANOBS » Dario Hunt, Full-Stack Digital Problem Solver</title>
+
+    <meta
+      name="title"
+      content="ANOBS » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      name="description"
+      content="ANOBS is a consulting and business services firm. As lead consultant, I revamped the brand identity, built the digital infrastructure, and developed growth systems."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://www.dariohunt.com/work/anobs" />
+    <meta
+      property="og:title"
+      content="ANOBS » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      property="og:description"
+      content="ANOBS is a consulting and business services firm. As lead consultant, I revamped the brand identity, built the digital infrastructure, and developed growth systems."
+    />
+    <meta
+      property="og:image"
+      content="https://www.dariohunt.com/imgs/work/anobs-homepage.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://www.dariohunt.com/work/anobs"
+    />
+    <meta
+      property="twitter:title"
+      content="ANOBS » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      property="twitter:description"
+      content="ANOBS is a consulting and business services firm. As lead consultant, I revamped the brand identity, built the digital infrastructure, and developed growth systems."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.dariohunt.com/imgs/work/anobs-homepage.webp"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -35,7 +80,10 @@
     <header>
       <div class="logo">
         <a href="../"
-          ><img src="../imgs/logos/name-logo-light.webp" alt=""
+          ><img
+            src="../imgs/logos/name-logo-light.webp"
+            alt="Dario Hunt Logo"
+            class="logo__img"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
