--- a/work/shop-llf.html
+++ b/work/shop-llf.html
@@ -4,6 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shop.llf » Dario Hunt, Full-Stack Digital Problem Solver</title>
+    <meta
+      name="description"
+      content="shop.llf is an apparel/e-commerce website. As creative director and developer, I led branding, design, web development, and marketing."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://www.dariohunt.com/work/shop-llf" />
+    <meta
+      property="og:title"
+      content="shop.llf » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      property="og:description"
+      content="shop.llf is an apparel/e-commerce website. As creative director and developer, I led branding, design, web development, and marketing."
+    />
+    <meta
+      property="og:image"
+      content="https://www.dariohunt.com/imgs/work/shop-llf-homepage.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://www.dariohunt.com/work/shop-llf"
+    />
+    <meta
+      property="twitter:title"
+      content="shop.llf » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      property="twitter:description"
+      content="shop.llf is an apparel/e-commerce website. As creative director and developer, I led branding, design, web development, and marketing."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.dariohunt.com/imgs/work/shop-llf-homepage.webp"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -35,7 +75,10 @@
     <header>
       <div class="logo">
         <a href="../"
-          ><img src="../imgs/logos/name-logo-light.webp" alt=""
+          ><img
+            src="../imgs/logos/name-logo-light.webp"
+            alt="Dario Hunt Logo"
+            class="logo__img"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
