--- a/projects/collectivv.html
+++ b/projects/collectivv.html
@@ -3,9 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      LIVING LIFE FEARLESS » Dario Hunt, Full-Stack Digital Problem Solver
-    </title>
+    <title>Collectivv » Dario Hunt, Full-Stack Digital Problem Solver</title>
+
+    <meta
+      name="title"
+      content="Collectivv » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      name="description"
+      content="Collectivv is a creator-first community platform designed to prioritize intentional discovery, curated content, and meaningful interaction."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:url"
+      content="https://www.dariohunt.com/projects/collectivv"
+    />
+    <meta
+      property="og:title"
+      content="Collectivv » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      property="og:description"
+      content="Collectivv is a creator-first community platform designed to prioritize intentional discovery, curated content, and meaningful interaction."
+    />
+    <meta
+      property="og:image"
+      content="https://www.dariohunt.com/imgs/projects/collectivv-app-1.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://www.dariohunt.com/projects/collectivv"
+    />
+    <meta
+      property="twitter:title"
+      content="Collectivv » Dario Hunt, Full-Stack Digital Problem Solver"
+    />
+    <meta
+      property="twitter:description"
+      content="Collectivv is a creator-first community platform designed to prioritize intentional discovery, curated content, and meaningful interaction."
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.dariohunt.com/imgs/projects/collectivv-app-1.webp"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -37,7 +83,10 @@
     <header>
       <div class="logo">
         <a href="../"
-          ><img src="../imgs/logos/name-logo-light.webp" alt=""
+          ><img
+            src="../imgs/logos/name-logo-light.webp"
+            alt="Dario Hunt Logo"
+            class="logo__img"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
