feat: add copyright notice to footer across multiple pages

--- a/index.html
+++ b/index.html
@@ -386,6 +386,10 @@
                     </a>
                 </li>
             </ul>
+
+            <div class="footer__copyright">
+                © Dario LLC. All rights reserved.
+            </div>
           </footer>
 
           <script src="js/index.js"></script>
