--- a/projects/collectivv.html
+++ b/projects/collectivv.html
@@ -333,6 +333,8 @@
           </a>
         </li>
       </ul>
+
+      <div class="footer__copyright">© Dario LLC. All rights reserved.</div>
     </footer>
 
     <script src="../js/index.js"></script>
