--- a/projects/mememachine3000.html
+++ b/projects/mememachine3000.html
@@ -332,6 +332,8 @@
           </a>
         </li>
       </ul>
+
+      <div class="footer__copyright">© Dario LLC. All rights reserved.</div>
     </footer>
 
     <script src="../js/index.js"></script>
