feat: update logo image and implement dynamic copyright year in footer across multiple pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="imgs/logos/name-logo-light.webp" alt="Dario Hunt Logo" class="logo__img">
+                <img src="imgs/logos/name-logo-light-stacked.webp" alt="Dario Hunt Logo" class="logo__img">
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
@@ -388,7 +388,7 @@
             </ul>
 
             <div class="footer__copyright">
-                © Dario LLC. All rights reserved.
+                © <span id="copyright-year"></span> Dario LLC. All rights reserved.
             </div>
           </footer>
 
