--- a/projects/collectivv.html
+++ b/projects/collectivv.html
@@ -84,7 +84,7 @@
       <div class="logo">
         <a href="../"
           ><img
-            src="../imgs/logos/name-logo-light.webp"
+            src="../imgs/logos/name-logo-light-stacked.webp"
             alt="Dario Hunt Logo"
             class="logo__img"
         /></a>
@@ -334,7 +334,9 @@
         </li>
       </ul>
 
-      <div class="footer__copyright">© Dario LLC. All rights reserved.</div>
+      <div class="footer__copyright">
+        © <span id="copyright-year"></span> Dario LLC. All rights reserved.
+      </div>
     </footer>
 
     <script src="../js/index.js"></script>
